--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -212,7 +212,7 @@ In this case the municipality recognizes that in a certain area or street there 
 \paragraph{The municipality wants to discover what're the most dangerous zones of the city.}
 The municipality would like to know which are the most dangerous streets in order to monitor them with more attention. This could be useful for the municipality if it wants to improve its service quality.
 \paragraph{The user signs-in to the platform: }
-In this case the user compiles all the mandatory fields which are: name,surname,username,e-mail,password and FC. Driving license data are not mandatory because this system is designed for people who use the app also to ride a bike or walk.
+In this case the user compiles all the mandatory fields which are: name,surname,username,password,fiscal code. Driving license data are not mandatory because this system is designed for people who use the app also to ride a bike or walk.
 \paragraph{The user logs-in to the platform: }
 The user can log-in to the system by entering username and password.
 \paragraph{The user logs-out from the platform:}
